--- a/index.html
+++ b/index.html
@@ -198,8 +198,83 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="about"></section>
+        <section class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Name *</label>
+              <input
+                class="form__input"
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Name Surname"
+                required
+              />
+              <label class="form__label" for="guests">Number of guests *</label>
+              <input
+                class="form__input"
+                type="number"
+                name="guests"
+                id="guests"
+                min="1"
+                max="8"
+                placeholder="1-8"
+                required
+              />
+              <label class="form__label" for="date">Date & time *</label>
+              <input
+                class="form__input"
+                type="date"
+                name="date"
+                id="date"
+                placeholder="dd.mm.yyyy"
+                required
+              />
+              <label class="form__label" for="email">Your email *</label>
+              <input
+                class="form__input"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="email@email.com"
+                required
+              />
+            </fieldset>
+            <button class="form__button" type="submit">Book a table</button>
+            <div class="form__checkbox-wrapper">
+              <input
+                class="form__checkbox"
+                name="checkbox"
+                type="checkbox"
+                id="checkbox"
+                required
+                checked
+              />
+              <label class="form__label-checkbox" for="checkbox"
+                >I agree with the terms of use</label
+              >
+            </div>
+          </form>
+        </section>
+        <section class="about">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Practicum Library's hall. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
