--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             class="logo"
           />
           <div class="nav__links">
-            <a class="nav__link" href="">Menu</a>
-            <a class="nav__link" href="">Recipes</a>
-            <a class="nav__link" href="">Book a table</a>
-            <a class="nav__link" href="">Contacts</a>
+            <a class="nav__link" href="#menu">Menu</a>
+            <a class="nav__link" href="#recipes">Recipes</a>
+            <a class="nav__link" href="#reservation">Book a table</a>
+            <a class="nav__link" href="#footer">Contacts</a>
           </div>
         </nav>
         <h1 class="header__title">
@@ -59,7 +59,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="menu">
+        <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
@@ -158,7 +158,7 @@
             </div>
           </div>
         </section>
-        <section class="recipes">
+        <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -198,7 +198,7 @@
             </div>
           </div>
         </section>
-        <section class="reservation">
+        <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
@@ -274,9 +274,40 @@
             </p>
           </div>
           <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="footer">
+        <div class="footer__content">
+          <img
+            class="footer__logo"
+            src="./images/logo_practicum.svg"
+            alt="footer logo"
+          />
+          <div footer__social>
+            <h4 class="footer__social-heading">Social media</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="facebook icon"
+                />
+                <span class="footer__social-link">Facebook</span>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="instagram icon"
+                />
+                <span class="footer__social-link">Instagram</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">@ 2022 Or Zaid</p>
+      </footer>
     </div>
   </body>
 </html>
