My project final update

--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
                 height="273"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
@@ -187,7 +186,6 @@
                 height="273"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
@@ -228,7 +226,6 @@
                 type="date"
                 name="date"
                 id="date"
-                placeholder="dd.mm.yyyy"
                 required
               />
               <label class="form__label" for="email">Your email *</label>
@@ -284,7 +281,7 @@
             src="./images/logo_practicum.svg"
             alt="footer logo"
           />
-          <div footer__social>
+          <div class="footer__social">
             <h4 class="footer__social-heading">Social media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
