--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
-          <br />
+        </p>
+        <p class="header__description">
           the cozy vibes to help you get creative.
         </p>
         <img
