my project final updated

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         />
         <div class="header__paragraph">
           <p class="header__paragraph-hours">
-            Hours: <br />
-            Monday – Friday (10:00 – 19:00)<br />
-            Saturday – Sunday (11:00 – 18:00)
+            <span class="header__paragraph-hours-line">Hours:</span>
+            <span class="header__paragraph-hours-line"></span>Monday – Friday
+            (10:00 – 19:00)
+            <span class="header__paragraph-hours-line"></span>Saturday – Sunday
+            (11:00 – 18:00)
           </p>
           <p class="header__paragraph-address">
             200 Success Avenue, The Town of Practicum
