--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <title>Coffee Shop by Or Zaid</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" type="image/icon" href="./favicon_coffee_bean.ico" />
+    <link rel="icon" type="favicon.ico" href="./favicon_coffee_bean.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,40 +26,44 @@
             alt="Practicum Coffee Shop Logo"
             class="logo"
           />
-          <div class="nav__links">
+          <ul class="nav__links">
+            <li>
             <a class="nav__link" href="#menu">Menu</a>
+            </li>
+            <li>
             <a class="nav__link" href="#recipes">Recipes</a>
+            </li>
+            <li>
             <a class="nav__link" href="#reservation">Book a table</a>
+            </li>
+            <li>
             <a class="nav__link" href="#footer">Contacts</a>
-          </div>
+            </li>
+          </ul>
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty coffee</span>
-          <span class="header__span-linebreak">in the Practicum Library</span>
+          in the Practicum Library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
-        </p>
-        <p class="header__description">
           the cozy vibes to help you get creative.
         </p>
         <img
           src="./images/inside_coffee_shop.png"
-          alt="Coffee Shop Image"
+          alt="Coffee Shop"
           class="header__image"
         />
-        <div class="header__paragraph">
-          <p class="header__paragraph-hours">
-            <span class="header__paragraph-hours-line">Hours:</span>
-            <span class="header__paragraph-hours-line"></span>Monday – Friday
-            (10:00 – 19:00)
-            <span class="header__paragraph-hours-line"></span>Saturday – Sunday
-            (11:00 – 18:00)
-          </p>
-          <p class="header__paragraph-address">
+        <p class="header__paragraph">
+          <ul class="header__paragraph_type_hours">
+            <li>Hours:</li>
+            <li>Monday – Friday (10:00 – 19:00)</li>
+            <li>Saturday – Sunday (11:00 – 18:00)</li>
+         </ul>
+          <p class="header__paragraph_type_address">
             200 Success Avenue, The Town of Practicum
           </p>
-        </div>
+        </p>
       </header>
       <main class="content">
         <section class="menu" id="menu">
@@ -69,8 +73,8 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-            <div class="card">
-              <h4 class="card__title">Filter</h4>
+            <article class="card">
+              <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Regular (12 oz)
@@ -98,9 +102,9 @@
                   $1.25
                 </li>
               </ul>
-            </div>
-            <div class="card">
-              <h4 class="card__title">Espresso</h4>
+            </article>
+            <article class="card">
+              <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Macchiato
@@ -123,9 +127,9 @@
                   $10
                 </li>
               </ul>
-            </div>
-            <div class="card">
-              <h4 class="card__title">Baked Goods</h4>
+            </article>
+            <article class="card">
+              <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Almond Croissant
@@ -158,7 +162,7 @@
                   $0.25
                 </li>
               </ul>
-            </div>
+            </article>
           </div>
         </section>
         <section class="recipes" id="recipes">
@@ -168,10 +172,9 @@
             convenience:
           </p>
           <div class="recipes__videos">
-            <div class="recipes__iframe">
+            <div class="recipes__video">
               <iframe
-                width="480"
-                height="273"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -182,11 +185,9 @@
                 <span class="recipes__video-duration">~5 min</span>
               </div>
             </div>
-            <div class="recipes__iframe">
+            <div class="recipes__video">
               <iframe
-                class="recipes__video"
-                width="480"
-                height="273"
+              class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -288,20 +289,24 @@
             <h4 class="footer__social-heading">Social media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
                 <img
                   class="footer__social-icon"
                   src="./images/facebook_white.svg"
                   alt="facebook icon"
                 />
-                <span class="footer__social-link">Facebook</span>
+                <span class="footer__social-text">Facebook</span>
+                </a>              
               </li>
               <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
                 <img
                   class="footer__social-icon"
                   src="./images/instagram_white.svg"
                   alt="instagram icon"
                 />
-                <span class="footer__social-link">Instagram</span>
+                <span class="footer__social-text">Instagram</span>
+               </a>
               </li>
             </ul>
           </div>
