my project first review updates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <title>Coffee Shop by Or Zaid</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" type="favicon.ico" href="./favicon_coffee_bean.ico" />
+    <link rel="icon" href="./favicon_coffee_bean.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,16 +28,16 @@
           />
           <ul class="nav__links">
             <li>
-            <a class="nav__link" href="#menu">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-            <a class="nav__link" href="#recipes">Recipes</a>
+              <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-            <a class="nav__link" href="#reservation">Book a table</a>
+              <a class="nav__link" href="#reservation">Book a table</a>
             </li>
             <li>
-            <a class="nav__link" href="#footer">Contacts</a>
+              <a class="nav__link" href="#footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -54,15 +54,14 @@
           alt="Coffee Shop"
           class="header__image"
         />
-        <p class="header__paragraph">
-          <ul class="header__paragraph_type_hours">
-            <li>Hours:</li>
-            <li>Monday – Friday (10:00 – 19:00)</li>
-            <li>Saturday – Sunday (11:00 – 18:00)</li>
-         </ul>
-          <p class="header__paragraph_type_address">
-            200 Success Avenue, The Town of Practicum
-          </p>
+        <p class="header__paragraph"></p>
+        <ul class="header__paragraph_type_hours">
+          <li>Hours:</li>
+          <li>Monday – Friday (10:00 – 19:00)</li>
+          <li>Saturday – Sunday (11:00 – 18:00)</li>
+        </ul>
+        <p class="header__paragraph_type_address">
+          200 Success Avenue, The Town of Practicum
         </p>
       </header>
       <main class="content">
@@ -187,7 +186,7 @@
             </div>
             <div class="recipes__video">
               <iframe
-              class="recipes__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -290,23 +289,23 @@
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__social-link" href="#">
-                <img
-                  class="footer__social-icon"
-                  src="./images/facebook_white.svg"
-                  alt="facebook icon"
-                />
-                <span class="footer__social-text">Facebook</span>
-                </a>              
+                  <img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="facebook icon"
+                  />
+                  <span class="footer__social-text">Facebook</span>
+                </a>
               </li>
               <li class="footer__list-item">
                 <a class="footer__social-link" href="#">
-                <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="instagram icon"
-                />
-                <span class="footer__social-text">Instagram</span>
-               </a>
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="instagram icon"
+                  />
+                  <span class="footer__social-text">Instagram</span>
+                </a>
               </li>
             </ul>
           </div>
