--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           class="header__image"
         />
         <div class="header__info">
-          <ul class="header__paragraph_type_hours">
+          <ul class="header__info_type_hours">
             <li>Hours:</li>
             <li>Monday – Friday (10:00 – 19:00)</li>
             <li>Saturday – Sunday (11:00 – 18:00)</li>
           </ul>
-          <p class="header__paragraph_type_address">
+          <p class="header__info_type_address">
             200 Success Avenue, The Town of Practicum
           </p>
         </div>
