--- a/index.html
+++ b/index.html
@@ -54,16 +54,14 @@
           alt="Coffee Shop"
           class="header__image"
         />
-        <div class="header__info">
-          <ul class="header__info_type_hours">
-            <li>Hours:</li>
-            <li>Monday – Friday (10:00 – 19:00)</li>
-            <li>Saturday – Sunday (11:00 – 18:00)</li>
-          </ul>
-          <p class="header__info_type_address">
-            200 Success Avenue, The Town of Practicum
-          </p>
-        </div>
+        <ul class="header__paragraph header__paragraph_type_hours">
+          <li>Hours:</li>
+          <li>Monday – Friday (10:00 – 19:00)</li>
+          <li>Saturday – Sunday (11:00 – 18:00)</li>
+        </ul>
+        <p class="header__paragraph header__paragraph_type_address">
+          200 Success Avenue, The Town of Practicum
+        </p>
       </header>
       <main class="content">
         <section class="menu" id="menu">
