--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <title>Coffee Shop by Or Zaid</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" href="./favicon_coffee_bean.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,14 +54,16 @@
           alt="Coffee Shop"
           class="header__image"
         />
-        <ul class="header__paragraph header__paragraph_type_hours">
-          <li>Hours:</li>
-          <li>Monday – Friday (10:00 – 19:00)</li>
-          <li>Saturday – Sunday (11:00 – 18:00)</li>
-        </ul>
-        <p class="header__paragraph header__paragraph_type_address">
-          200 Success Avenue, The Town of Practicum
-        </p>
+        <div class="header__info">
+          <ul class="header__info-list">
+            <li class="header__paragraph">Hours:</li>
+            <li class="header__paragraph">Monday – Friday (10:00 – 19:00)</li>
+            <li class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</li>
+          </ul>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Practicum
+          </p>
+        </div>
       </header>
       <main class="content">
         <section class="menu" id="menu">
@@ -293,7 +295,7 @@
                     src="./images/facebook_white.svg"
                     alt="facebook icon"
                   />
-                  <span class="footer__social-text">Facebook</span>
+                  Facebook
                 </a>
               </li>
               <li class="footer__list-item">
@@ -303,7 +305,7 @@
                     src="./images/instagram_white.svg"
                     alt="instagram icon"
                   />
-                  <span class="footer__social-text">Instagram</span>
+                  Instagram
                 </a>
               </li>
             </ul>
