--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           alt="Coffee Shop"
           class="header__image"
         />
-        <div class="header__info">
-          <ul class="header__info-list">
+        <div class="header__footer">
+          <ul class="header__footer-list">
             <li class="header__paragraph">Hours:</li>
             <li class="header__paragraph">Monday – Friday (10:00 – 19:00)</li>
             <li class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</li>
